--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -13,22 +13,14 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-# Creates a release when a tag is pushed
-# The release will have the tag name as the title.
-# The tag description will be used as the body, concatenated with the commit message.
-# If tag description contains the text "Release", the release will be marked as a stable release.
-# The release will contain the following files:
-# - deshader-git-*.deb for each Ubuntu version
-# - deshader-git-*.tar.zst for Arch
-# - deshader-git-windows-*.zip
+# Creates package artifacts for Ubuntu, Arch, Windows and MacOS when a tag is pushed
 
 # To skip building for a specific platform, add "skip linux" or "skip windows" to the commit message.
 
 name: packages
-on: push
-
-permissions:
-  contents: write
+on:
+  - push
+  - workflow_dispatch
 
 jobs:
   ubuntu-mutli:
@@ -37,7 +29,7 @@ jobs:
             os: [ubuntu-20.04, ubuntu-24.04]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15 # Usually runs for 6.5 minutes
-    if: startsWith(github.ref, 'refs/tags/') && !contains(github.event.head_commit.message, 'skip linux')
+    if: ${{ (github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')) && !contains(github.event.head_commit.message, 'skip linux') }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -70,7 +62,7 @@ jobs:
   ubuntu-arch-win:
     runs-on: ubuntu-22.04 # Wine works weird on 24.04
     timeout-minutes: 25 # Usually runs for 20 minutes
-    if: startsWith(github.ref, 'refs/tags/')
+    if: ${{ (github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')) && !(contains(github.event.head_commit.message, 'skip linux') && contains(github.event.head_commit.message, 'skip windows')) }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -166,14 +158,14 @@ jobs:
         run: rm -f src/deshader/zig-out/bin/generate_headers
         continue-on-error: true
 
-      - name: Create windows ZIP
+      - name: Compress windows executables
         id: windows-zip
         if: steps.win-compile.conclusion == 'success'
         run: zip -rj deshader-git-windows-${{ github.ref_name }}.zip bin
         working-directory: src/deshader/zig-out
         continue-on-error: true
 
-      - name: Add headers to ZIP
+      - name: Add headers to archive
         if: ${{ steps.windows-zip.conclusion == 'success' }}
         run: zip -r deshader-git-windows-${{ github.ref_name }}.zip include
         working-directory: src/deshader/zig-out
@@ -187,34 +179,39 @@ jobs:
           name: deshader-windows
           path: src/deshader/zig-out/deshader-git-windows*.zip
 
-  create-release:
-    runs-on: ubuntu-latest
-    needs: [ubuntu-mutli, ubuntu-arch-win]
-    if: startsWith(github.ref, 'refs/tags/')
+  mac-os:
+    runs-on: macos-latest
+    timeout-minutes: 15
+    if: ${{ (github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/')) && !contains(github.event.head_commit.message, 'skip macos') }}
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref_name }}
-          fetch-tags: true
+            submodules: recursive
 
-      - name: Get tag description
-        id: tag-desc
-        run: echo "desc=`git tag -l --format='%(contents:subject)' $(git describe --tags --abbrev=0)`" >> $GITHUB_OUTPUT
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
+      - uses: mlugg/setup-zig@v1
         with:
-          merge-multiple: true
+            version: 0.13.0
 
-      - name: Create a Release
-        uses: softprops/action-gh-release@v2
+      - uses: oven-sh/setup-bun@v1
         with:
-            prerelease: ${{ !contains(steps.tag-desc.outputs.desc, 'Release') }}
-            body: "${{ steps.tag-desc.outputs.desc }}\n${{ github.event.head_commit.message }}"
-            files: deshader-git*
+            bun-version: latest
 
-      - name: Remove artifacts
-        uses: geekyeggo/delete-artifact@v5
+      - uses: lukka/get-cmake@latest
+
+      - name: Download VCPKG
+        uses: lukka/run-vcpkg@v11
+
+      - name: Build for macOS
+        run: zig build deshader launcher generate_headers --release=safe
+
+      - name: Compress executables
+        run: zip -rj deshader-git-macos-${{ github.ref_name }}.zip zig-out/bin
+
+      - name: Add headers to archive
+        run: zip -r deshader-git-macos-${{ github.ref_name }}.zip zig-out/include
+
+      - name: Archive macOS package
+        uses: actions/upload-artifact@v4
         with:
-          name: deshader-*
-          failOnError: false
+          name: deshader-macos
+          path: deshader-git-macos*.zip
