--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -186,7 +186,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-            submodules: recursive
+          repository: 'osdvf/deshader-build'
 
       - uses: mlugg/setup-zig@v1
         with:
@@ -200,15 +200,14 @@ jobs:
 
       - name: Download VCPKG
         uses: lukka/run-vcpkg@v11
+        with:
+          vcpkgGitCommitId: 10b7a178346f3f0abef60cecd5130e295afd8da4
 
       - name: Build for macOS
-        run: zig build deshader launcher generate_headers --release=safe
+        run: bash makeapp.bash
 
-      - name: Compress executables
-        run: zip -rj deshader-git-macos-${{ github.ref_name }}.zip zig-out/bin
-
-      - name: Add headers to archive
-        run: zip -r deshader-git-macos-${{ github.ref_name }}.zip zig-out/include
+      - name: Compress the archive
+        run: zip -r deshader-git-macos-${{ github.ref_name }}.zip src/deshader/zig-out/*
 
       - name: Archive macOS package
         uses: actions/upload-artifact@v4
