Better VCPKG libraries handling, signing on macOS
- Externalized GLFW3 library
- Better s[LibName] build option consistency

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,10 @@
 name: release
 on:
   workflow_run:
-    workflows: [package]
-    types: [completed]
+    workflows: [packages]
+    types:
+      - completed
+  workflow_dispatch:
 
 permissions:
   contents: write
