--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -210,6 +210,26 @@ jobs:
       - name: Build for macOS
         run: PATH="./vcpkg/:$PATH" bash makeapp.bash
 
+      - name: Hydrate certificate
+        env:
+          CERTIFICATE: ${{ secrets.CERT_P12 }}
+        run: |
+          base64 -d <<< $CERTIFICATE > cert.p12
+
+      - name: Sign the bundle
+        env:
+          KEYCHAIN: build.keychain
+          KEYCHAIN_PASSWORD: deshader
+          CERT_FILE: cert.p12
+          CERT_PASSWORD: ${{ secrets.CERT_PASSWORD }}
+          CERT: ${{ secrets.CERT }}
+        run: |
+          security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN
+          security list-keychains -s $KEYCHAIN
+          security set-keychain-settings -t 3600 -l $KEYCHAIN
+          security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN
+          bash makeapp.bash sign
+
       - name: Get architecture
         run: echo "arch=$(uname -m)" >> $GITHUB_OUTPUT
         id: arch
